--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,47 @@
-- title: General Information
+- title: Teaching
+  type: time_table
+  contents:
+    - title: <a href="https://searle.northwestern.edu/programs-services/programs/program-pages/mentored-discussions-of-teaching.html" style="color:inherit;">Mentored Discussions of Teaching</a>
+      institution: Searle Center for Advancing Learning and Teaching
+      year: 2024
+
+    - title: <a href="https://www.mccormick.northwestern.edu/materials-science/academics/courses/descriptions/358.html" style="color:inherit;">Modeling and Simulation in Materials Science</a>
+      institution: Teaching Assistant, Northwestern (MSE 358)
+      year: 2023
+      description:
+        - Redesigned lab assignments in Jupyter Notebooks and <a href="https://wiki.fysik.dtu.dk/ase/index.html">ASE</a>.
+        - Delivered lectures on materials informatics and machine learning.
+        - Held tutorials on Python, Linux, and high-performance computing.
+
+    - title: Probability and Statistics
+      institution: Peer Mentor, SJTU (MATH 119)
+      year: 2017
+
+
+- title: Industry Experiences
+  type: time_table
+  contents:
+    - title: Research Intern
+      institution: <a href="https://merl.com" style="color:inherit;">Mitsubishi Electric Research Laboratories</a>
+      year: 2023
+      description:
+        - Machine learning-based electric motor design and diagnosis.
+
+
+- title: Professional Services
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Reviewer
+      value: NeurIPS AI4Mat Workshop, Neural Computing & Applications, MRS Advances, ISA Transactions, ICEM
 
-- title: Education
-  type: time_table
-  contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
 
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Outreach
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: <a href="https://www.nico.northwestern.edu/news-events/nico-reading-group.html" style="color:inherit;">NICO Reading Group</a>
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Organize discussions on fundamental and state-of-the-art AI methods with applications in various domains.
+        - Participated by students and scholars from university, community college, and industry.
+    - title: <a href="https://bcse.northwestern.edu/standalonePage/baxter_symposium" style="color:inherit;">Baxter Center for Science Education</a>
       items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Volunteer at a symposium for middle/high school teachers from the Chicago region to explore cutting-edge science activities.
