--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -32,7 +32,7 @@
   type: map
   contents:
     - name: Reviewer
-      value: NeurIPS AI4Mat Workshop, Neural Computing & Applications, MRS Advances, ISA Transactions, ICEM
+      value: NeurIPS AI4Mat Workshop, Neural Computing & Applications, MRS Advances, ISA Transactions, ICEM, IDETC
 
 
 - title: Outreach
